Updated readme and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 .import/600px-Serbule_annotated2.jpg-e0b608caf0048257018ec906cf4ff9fb.stex
 .import/servbule_hills.png-7983e2bacebc3a7fd57d7f1adc947715.stex
 .import/servbule_hills.png-21566907906bf25ea81b897eeacb305f.stex
+
+/Build/
+export_presets.cfg
